NAVIGATOR/k8s-yaml/icn-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: ecm-icn-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app: icnserver-cluster1
  type: NodePort
  sessionAffinity: ClientIP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ecm-icn-np
  namespace: $KUBE_NAME_SPACE
spec:
   podSelector: {}
   policyTypes:
    - Ingress
    - Egress
   ingress:
   - {}
   egress:
   - ports:
     - port: 53
       protocol: UDP
     - port: 53
       protocol: TCP
   - to:
     - namespaceSelector: {}
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ecm-icn
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: icnserver-cluster1
    spec:
      imagePullSecrets:
        - name: admin.registrykey
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - icnserver-cluster1
              topologyKey: "kubernetes.io/hostname"
      containers:
      - image: <Repository for Docker Container Image>/default/navigator:latest
        imagePullPolicy: Always
        name: ecm-icn
        securityContext:
          # If deployment on OpenShift and image supports arbitrary uid,
          # remove runAsUser and pods will run with arbitrarily assigned user ID.
          runAsUser: 50001
          allowPrivilegeEscalation: false
        resources:
          requests:
            memory: 512Mi
            cpu: 500m
          limits:
            memory: 1536Mi
            cpu: 1
        ports:
        - containerPort: 9080
          name: http
        - containerPort: 9443
          name: https
        readinessProbe:
          httpGet:
            path: /navigator
            port: 9080
            httpHeaders:
              - name: Content-Encoding
                value: gzip
          initialDelaySeconds: 180
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /navigator
            port: 9080
            httpHeaders:
              - name: Content-Encoding
                value: gzip
          initialDelaySeconds: 600
          periodSeconds: 5
        volumeMounts:
          - name: icncfgstore-pvc
            mountPath: "/opt/ibm/wlp/usr/servers/defaultServer/configDropins/overrides"
            subPath: configDropins/overrides
          - name: icnlogstore-pvc
            mountPath: "/opt/ibm/wlp/usr/servers/defaultServer/logs"
            subPath: logs
          - name: icnpluginstore-pvc
            mountPath: "/opt/ibm/plugins"
            subPath: plugins
          - name: icnvwcachestore-pvc
            mountPath: "/opt/ibm/viewerconfig/cache"
            subPath: viewercache
          - name: icnvwlogstore-pvc
            mountPath: "/opt/ibm/viewerconfig/logs"
            subPath: viewerlogs
          - name: icnasperastore-pvc
            mountPath: "/opt/ibm/Aspera"
            subPath: Aspera

      volumes:
        - name: icncfgstore-pvc
          persistentVolumeClaim:
            claimName: "icn-cfgstore"
        - name: icnlogstore-pvc
          persistentVolumeClaim:
            claimName: "icn-logstore"
        - name: icnpluginstore-pvc
          persistentVolumeClaim:
            claimName: "icn-pluginstore"
        - name: icnvwcachestore-pvc
          persistentVolumeClaim:
            claimName: "icn-vwcachestore"
        - name: icnvwlogstore-pvc
          persistentVolumeClaim:
            claimName: "icn-vwlogstore"
        - name: icnasperastore-pvc
          persistentVolumeClaim:
            claimName: "icn-asperastore"
